Bug 1312646 - Carry ChooseApplicationCache flag from child after redirect callback is done. r=jduell

--HG--
extra : rebase_source : c91b0722331e9bd897fa97cd380691296b408871