netwerk/protocol/http/HttpChannelChild.cpp
@@ -1684,10 +1684,17 @@ HttpChannelChild::OnRedirectVerifyCallback(nsresult result)
     }
   }
 
+  bool chooseAppcache = false;
+  nsCOMPtr<nsIApplicationCacheChannel> appCacheChannel =
+    do_QueryInterface(newHttpChannel);
+  if (appCacheChannel) {
+    appCacheChannel->GetChooseApplicationCache(&chooseAppcache);
+  }
+
   if (mIPCOpen)
     SendRedirect2Verify(result, *headerTuples, loadFlags, redirectURI,
                         corsPreflightArgs, forceHSTSPriming,
-                        mixedContentWouldBlock);
+                        mixedContentWouldBlock, chooseAppcache);
 
   return NS_OK;
 }
