netwerk/protocol/http/HttpChannelParent.h
@@ -155,7 +155,8 @@ protected:
                                    const OptionalURIParams& apiRedirectUri,
                                    const OptionalCorsPreflightArgs& aCorsPreflightArgs,
                                    const bool& aForceHSTSPriming,
-                                   const bool& aMixedContentWouldBlock) override;
+                                   const bool& aMixedContentWouldBlock,
+                                   const bool& aChooseAppcache) override;
   virtual bool RecvUpdateAssociatedContentSecurity(const int32_t& broken,
                                                    const int32_t& no) override;
   virtual bool RecvDocumentChannelCleanup() override;
